--- a/dbTransport.cabal
+++ b/dbTransport.cabal
@@ -40,6 +40,7 @@ library
                        ,system-filepath          >= 0.4.7     &&   < 0.5.0
                        ,time                     >= 1.4       &&   < 1.5
                        ,old-locale               >= 1.0.0.4   &&   < 1.1
+                       ,parsec                   >= 3.1.3     &&   < 3.1.4
                        ,process                  >= 1.1.0.1   &&   < 1.2
                        ,mtl                      >= 2.1       &&   < 2.2
                        ,bson                     >= 0.2.1     &&   < 0.2.2
