--- a/dbTransport.cabal
+++ b/dbTransport.cabal
@@ -15,22 +15,22 @@ library
 
 
 
-    extensions:      TemplateHaskell
-                     QuasiQuotes
-                     OverloadedStrings
-                     NoImplicitPrelude
-                     CPP
-                     MultiParamTypeClasses
-                     TypeFamilies
-                     GADTs
-                     GeneralizedNewtypeDeriving
-                     FlexibleContexts
-                     EmptyDataDecls
-                     NoMonomorphismRestriction
-                     TypeFamilies
-                     Arrows
+    extensions:         TemplateHaskell
+                        QuasiQuotes
+                        OverloadedStrings
+                        NoImplicitPrelude
+                        CPP
+                        MultiParamTypeClasses
+                        TypeFamilies
+                        GADTs
+                        GeneralizedNewtypeDeriving
+                        FlexibleContexts
+                        EmptyDataDecls
+                        NoMonomorphismRestriction
+                        TypeFamilies
+                        Arrows
 
-    Build-Depends:      base                     >= 3         &&   <   5
+    Build-Depends:      base                     >= 3         &&   < 5
                        ,persistent-mongoDB       >= 1.2       &&   < 1.3
                        ,mongoDB                  >= 1.3.2     &&   < 1.4.0
                        ,bytestring               >= 0.9       &&   < 1.0
@@ -38,8 +38,10 @@ library
                        ,directory                >= 1.2.0.1   &&   < 1.3.0.0
                        ,system-fileio            >= 0.3.11    &&   < 0.4.0
                        ,system-filepath          >= 0.4.7     &&   < 0.5.0
+                       ,transformers             >= 0.3.0.0   &&   < 0.4.0.0
                        ,time                     >= 1.4       &&   < 1.5
                        ,old-locale               >= 1.0.0.4   &&   < 1.1
+                       ,either                   >= 3.4.1     &&   < 3.4.2
                        ,parsec                   >= 3.1.3     &&   < 3.1.4
                        ,process                  >= 1.1.0.1   &&   < 1.2
                        ,mtl                      >= 2.1       &&   < 2.2
@@ -52,14 +54,9 @@ library
                        
 
 Executable importFolder
-
-
-    main-is:           Main.hs
-
+    main-is:            Main.hs
     build-depends:      base
-
-                       
-                       
+                                          
     ghc-options:      -threaded -O2 
 
 
