--- a/dbTransport.cabal
+++ b/dbTransport.cabal
@@ -39,6 +39,7 @@ library
                        ,system-fileio            >= 0.3.11    &&   < 0.4.0
                        ,system-filepath          >= 0.4.7     &&   < 0.5.0
                        ,transformers             >= 0.3.0.0   &&   < 0.4.0.0
+                       ,containers               >= 0.5.0.0   &&   < 0.5.2.2
                        ,time                     >= 1.4       &&   < 1.5
                        ,old-locale               >= 1.0.0.4   &&   < 1.1
                        ,either                   >= 3.4.1     &&   < 3.4.2
