--- a/dbTransport.cabal
+++ b/dbTransport.cabal
@@ -60,7 +60,7 @@ Executable importFolder
     main-is:            Main.hs
     build-depends:      base
                                           
-    ghc-options:      -threaded -O2 
+    ghc-options:      -threaded -O2 -rtsopts
 
 
 
