working on report maker

--- a/dbTransport.cabal
+++ b/dbTransport.cabal
@@ -10,6 +10,7 @@ Cabal-Version:       >=1.2
 
 library 
     exposed-modules: DatabaseTransport
+                     CSV_Transport
                      Types
                      Tests
 
