--- a/dbTransport.cabal
+++ b/dbTransport.cabal
@@ -64,7 +64,7 @@ Executable importFolder
     main-is:            Main.hs
     build-depends:      base
                                           
-    ghc-options:      -threaded -O2 -rtsopts
+    ghc-options:      -threaded -rtsopts -O1
 
 
 
