--- a/dbTransport.cabal
+++ b/dbTransport.cabal
@@ -45,6 +45,7 @@ library
                        ,old-locale               >= 1.0.0.4   &&   < 1.1
                        ,either                   >= 3.4.1     &&   < 3.4.2
                        ,parsec                   >= 3.1.3     &&   < 3.1.4
+                       ,attoparsec               >= 0.10.4.0  
                        ,process                  >= 1.1.0.1   &&   < 1.2
                        ,mtl                      >= 2.1       &&   < 2.2
                        ,bson                     >= 0.2.1     &&   < 0.2.2
@@ -63,7 +64,7 @@ Executable importFolder
     main-is:            Main.hs
     build-depends:      base
                                           
-    ghc-options:      -threaded -rtsopts -O2 -Wall
+    ghc-options:      -fprof-auto -threaded -rtsopts -O2 -Wall -prof
 
 
 
